# xone-0.1.0

./: Cargo.toml  README.md  zulkarnaen.html
.xone/: README.md  hooks.conf  ui.conf
.xone/ai/: README.md  ai.conf
about/: README.md  xone-profile.md
docs/: README.md  plugin-upload-test.md
plugin_samples/: README.md
plugin_samples/hello-hook/: README.md  hooks.conf  manifest.json
scripts/: README.md  package-plugin.ps1  test-lib.ps1
src/: README.md  lib.rs  main.rs
src/app/: README.md  control.rs  editor_clipboard.rs  explorer_controller.rs  helpers.rs  hooks.rs  input_router.rs  language.rs  mod.rs  mouse_router.rs  settings_panel.rs  shortcuts_panel.rs  style.rs  terminal_controller.rs  tests.rs
src/app/terminal/: README.md  mod.rs  state.rs  vt100_imp.rs  widget.rs
src/app/ui/: README.md  mod.rs
src/core/: README.md  error.rs  mod.rs  path.rs  workspace.rs
src/core/fs/: README.md  file.rs  folder.rs  mod.rs  tree.rs
